
2016-08-15  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, typeck.c: fixed bug #299 (cannot have multiple screens in
	  one DISPLAY).

2016-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, reserved.c: temporarily added new command line option
	  -R, -reserve-all for unsetting specify-all-reserved in compiler conf;
	  FIXME: should be possible with -fno-specify-all-reserved-words

2016-08-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c (is_invalid_word): new function for checking the words,
	  currently only checks user defined words to be < COB_MAX_WORDLEN
	* reserved.c: don't compare/print indicators and alias as part of the words
	* config.c (cb_config_entry): reserved words handling - remove whitespace
	  and translate : to =
	* cobc, config.c: set output name for -f<tag>=<value> in cobc.c instead
	  in multiple functions in confic.c and show the complete parameter

2016-08-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.def: renamed compiler configuration relaxed-syntax-check to
	  relax-syntax-checks for supporting the removed -frelax-syntax when set
	  on command line
	* general: renamed cb_relaxed_syntax_check to cb_relaxed_syntax_checks

2016-08-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: use printf to do formatting instead of tabs
	* cobc.c: added option --brief (-q) to reset -verbose and
	  remove the path to cobc in argv[0]
	* cobc.c, cobc.h: better help for compiler flags
	* flag.def, cobc.c, cobc.h: added more parameters in flag.def for better
	  help output; changed defines for CB_FLAG_RQ and CB_FLAG_NQ
	* Makefile.am: add config.def as prerequisite for man-page 

2016-08-09  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, typeck.c, codegen.c: added support for program-prototypes in
	  REPOSITORY and CALL and CANCEL statements.
	* tree.h (cb_func_prototype): renamed to cb_prototype.